---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
<script context="module" lang="ts">
import { Form as   Form }     from './components/Form.svelte' ;
import     Button     from "./components/Button.svelte";
debugger;
statement ( ) ;
var foo: string = "";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
import Button from "./components/Button.svelte";
import { Form } from "./components/Form.svelte";
debugger;
statement();
var foo = "";
</script>
<div></div>
```

```block
file.svelte lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   import Button from "./components/Button.svelte";
    2 2 │   import { Form } from "./components/Form.svelte";
    3   │ - debugger;
    4 3 │   statement();
    5 4 │   var foo = "";
  

```

```block
file.svelte lint/style/noVar  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use let or const instead of var.
  
  i A variable declared with var is accessible in the whole module. Thus, the variable can be accessed before its initialization and outside the block where it is declared.
  
  i See MDN web docs for more details.
  
  i Unsafe fix: Use 'const' instead.
  
    3 3 │   debugger;
    4 4 │   statement();
    5   │ - var·foo·=·"";
      5 │ + const·foo·=·"";
    6 6 │   
  

```
